--- a/src/containers/Home.css
+++ b/src/containers/Home.css
@@ -11,3 +11,15 @@
 .Home .lander p {
   color: rgb(204, 202, 202);
 }
+
+.Home .notes h4 {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+  overflow: hidden;
+  line-height: 1.5;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.Home .notes p {
+  color: #666;
+}
