--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "PT Serif", serif
+  font-family: "Walter Turncoat", cursive
 }
 
 select.form-control,
